--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link href="src/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
       <div class="alert alert-primary" role="alert">
@@ -65,6 +65,7 @@
               </table>
            
             </span>
-      <script src="src/index.js"></script>
+            <p><a href="https://www.netlify.com">Open-source code</a> by Anastasiia Melenevych</p>
+      <script src="script.js"></script>
   </body>
 </html>
