Added open-source code link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </table>
            
             </span>
-            <p><a href="https://www.netlify.com">Open-source code</a> by Anastasiia Melenevych</p>
+            <p><a href="https://github.com/AnastasiiaYaM/Anastasiia-s-weather-project">Open-source code</a> by Anastasiia Melenevych</p>
       <script src="script.js"></script>
   </body>
 </html>
