--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
           
           <h3 id="date"></h3>
         </div>
-        <h3>Temperature: <span id="temperature"></span> °C</h3>
-       <h4>⛅</h4>
+        <h3>Temperature: <span id="temperature"></span> 
+          <span class="units">
+                  <a href="#" id="celsius-link">°C</a> |
+                  <a href="#" id="fahrenheit-link">°F</a>
+                </span>
+        </h3>
+       <h4><img src="" alt="Clear" id="icon" />
+    </h4>
        <h3>Humidity: <span id="humidity"></span> %</h3>
        <h3>Wind: <span id="wind"></span> km/h</h3>
        <h3><span id="description"></span></h3>
