added HTML, CSS and JS for the weather forecast

--- a/index.html
+++ b/index.html
@@ -61,33 +61,7 @@
             </div>
           </div>
         </form>
-        <span class="weekDays">
-          <table>
-            <tbody>
-              <tr>
-                <th>Monday</th>
-              </tr>
-              <tr>
-                <th>Tuesday</th>
-              </tr>
-              <tr>
-                <th>Wednesday</th>
-              </tr>
-              <tr>
-                <th>Thurday</th>
-              </tr>
-              <tr>
-                <th>Friday</th>
-              </tr>
-              <tr>
-                <th>Saturday</th>
-              </tr>
-              <tr>
-                <th>Sunday</th>
-              </tr>
-            </tbody>
-          </table>
-        </span>
+        <div class="weather-forecast" id="forecast"></div>
       </div>
       <small
         ><a href="https://github.com/AnastasiiaYaM/Anastasiia-s-weather-project"
